--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GeoSnap</string>
+    <string name="facebook_app_id">459343100932396</string>
     <string name="hours">hours</string>
     <string name="minutes">minutes</string>
     <string name="days">days</string>
